<resources>
    <string name="app_name">Gamify</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="bi_challange">BI_CHALLANGE</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="breaktime_options">Break Type</string>
    <string name="timeout_options">Answer Window (minutes)</string>
    <string name="favor_description_text">Task Description</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="score_to_pay">Max Credit Value</string>
    <string name="score_string">Credits: </string>
    <string name="breaktime_list_text">Breaks: </string>
    <string name="favor_list_text">Tasks: </string>
    <string name="createTask">Create Task</string>
    <string name="running">Running Tasks &amp; Breaks</string>
    <string name="createBreak">Create Break</string>
</resources>
